WOLEET-924 Adding a /discovery/user endpoint
