# server/src/api/routers/discovery.ts
@@ -5,7 +5,7 @@ import { BadRequest } from 'http-errors';
 import { getOwnerByPubKey, getAllKeysOfUser } from '../../controllers/key';
 import { serializeKey } from '../serialize/key';
 import { serializeUser } from '../serialize/user';
-import { searchAllUsers } from '../../controllers/user';
+import { searchAllUsers, getUserById } from '../../controllers/user';
 import { bearerAuth } from '../authentication';
 
 const vuid = validate.param('userId', 'uuid');
@@ -43,6 +43,18 @@ router.get('/user/:pubKey', vaddr, async function (ctx) {
   const user = await getOwnerByPubKey(pubKey);
   ctx.body = serializeUser(user, false);
 });
+
+/**
+ * @route: /discover/user
+ * @swagger
+ *  operationId: discoverUser
+ */
+router.get('/user', async function (ctx) {
+  const userId = ctx.token.userId;
+  const user = await getUserById(userId);
+  ctx.body = serializeUser(user, false);
+});
+
 
 /**
  * @route: /discover/users
